--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
   </div>  
   <div class="Footer">
     <span>footer</span>
-     <p1 th:text="${randomCocktail.history}"></p1>
+     <p1 th:text="${randomCocktail.strDrink}"></p1>
   </div>
 </body>
 </html>
